<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailBookFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_writer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include layout="@layout/list_dummy_text"/>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="start"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    tools:ignore="UseCompoundDrawables">

                    <com.github.florent37.shapeofview.shapes.CircleView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_writer"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/dummy_text"
                            tools:src="@drawable/ic_writer_icon" />

                    </com.github.florent37.shapeofview.shapes.CircleView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_writer_name"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:lines="1"
                            tools:text="Kyoko Sakura" />

                        <TextView
                            android:id="@+id/tv_writer_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorBlack50"
                            android:textSize="13sp"
                            tools:text="xxkyoko" />
                    </LinearLayout>
                    <!--            end of parent linear-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_book_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        tools:text="@string/rate_text" />

                    <TextView
                        android:id="@+id/tv_book_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/status_text" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:text="@string/genres_label"/>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <include layout="@layout/list_dummy_text"/>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_marginTop="10dp"
                        android:id="@+id/rv_genres_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_hashtags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_genres">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:text="@string/hashtags_label"/>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <include layout="@layout/list_dummy_text"/>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_hashtags">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/short_desc_text"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"/>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <include layout="@layout/list_dummy_text"/>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <TextView
                        android:id="@+id/tv_book_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack50"
                        tools:text="@string/dummy_text"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_bab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_desc">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chapter_text"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                            android:contentDescription="@string/dummy_text"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/expanded_sub_chapter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer_chapter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <include layout="@layout/list_dummy_text"/>
                            <include layout="@layout/list_dummy_text"/>
                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_chapter_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>
                    <!--                    end of parent linear-->
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/related_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/related_book_text"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_bab"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_related"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/related_label"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_related"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/related_label">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/list_dummy"/>
                    <include layout="@layout/list_dummy"/>

                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>